--- a/index.html
+++ b/index.html
@@ -11,59 +11,64 @@
 <div class="page__container">
 <header class="header">
   <img src="./vendor/images/header-logo.png" alt="Логотип Место" class="header__logo">
+  <div class="header__horizontal-line"></div>
 </header>
 <main class="content">
 <section class="profile">
-  <img src="./vendor/images/portrait-jacques-yves-cousteau.png" alt="Портрет исследователя океана Жак Ив Кусто" class="profile__image">
   <div class="profile__container">
-    <h2 class="profile__title">Жак-Ив Кусто</h2>
+    <img src="./vendor/images/portrait-jacques-yves-cousteau.png" alt="Портрет исследователя океана Жак Ив Кусто" class="profile__image">
+    <div class="profile__wrapper">
+      <div class="profile__wrap">
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <button class="profile__edit-button"></button>
+      </div>
     <p class="profile__text">Исследователь океана</p>
-  </div>
-    <img src="./vendor/images/edit-button.svg" alt="Кнопка редактирования профиля" class="profile__edit-button">
-  <img src="./vendor/images/add-button.svg" alt="Кнопка добавления текста в профиль" class="profile__add-button">
+    </div>
+  <button class="profile__add-button"></button>
+</div>
 </section>
 <section class="elements">
   <div class="elements__container">
     <div class="element__container">
-      <img src="./vendor/images/element-1.jpg" alt="Карачаевск" class="element__image">
+      <img src="./vendor/images/element-1.jpg" alt="Северное сияние ночью" class="element__image">
       <div class="flex__container">
-        <h3 class="element__title" >Карачаевск</h3>
-        <img src="./vendor/images/heart-icon.svg" alt="Сердечко лайка" class="element__icon">
+        <h3 class="element__title" >Северное сияние</h3>
+        <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
-      <img src="./vendor/images/element-2.png" alt="Карачаевск" class="element__image">
+      <img src="./vendor/images/element-2.jpg" alt="Галактика" class="element__image">
       <div class="flex__container">
-        <h3 class="element__title">Гора Эльбрус</h3>
-        <img src="./vendor/images/heart-icon.svg" alt="Сердечко лайка" class="element__icon">
+        <h3 class="element__title">Галактика</h3>
+        <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
-      <img src="./vendor/images/element-3.png" alt="Карачаевск" class="element__image">
+      <img src="./vendor/images/element-3.jpg" alt="Северное сияние днём в Норвегии" class="element__image">
       <div class="flex__container">
-        <h3 class="element__title element_indent">Домбай</h3>
-        <img src="./vendor/images/heart-icon.svg" alt="Сердечко лайка" class="element__icon">
+        <h3 class="element__title element_indent">Норвегия</h3>
+        <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
-      <img src="./vendor/images/element-4.png" alt="Карачаевск" class="element__image">
+      <img src="./vendor/images/element-4.jpg" alt="Гора Эверест" class="element__image">
       <div class="flex__container">
-        <h3 class="element__title">Гора Эльбрус</h3>
-        <img src="./vendor/images/heart-icon.svg" alt="Сердечко лайка" class="element__icon">
+        <h3 class="element__title">Гора Эверест</h3>
+        <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
-      <img src="./vendor/images/element-5.png" alt="Карачаевск" class="element__image">
+      <img src="./vendor/images/element-5.jpg" alt="Восход у горы" class="element__image">
       <div class="flex__container">
-        <h3 class="element__title">Домбай</h3>
-        <img src="./vendor/images/heart-icon.svg" alt="Сердечко лайка" class="element__icon">
+        <h3 class="element__title">Восход у горы</h3>
+        <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
-      <img src="./vendor/images/element-6.png" alt="Карачаевск" class="element__image">
+      <img src="./vendor/images/element-6.jpg" alt="Поляна перед горой ночью" class="element__image">
       <div class="flex__container">
-        <h3 class="element__title">Карачаевск</h3>
-        <img src="./vendor/images/heart-icon.svg" alt="Сердечко лайка" class="element__icon">
+        <h3 class="element__title">Поляна</h3>
+        <button class="element__icon element__icon_active"></button>
     </div>
     </div>
   </div>
@@ -71,7 +76,7 @@
 </main>
 <footer class="footer">
   <p class="footer__copyright">
-    &copy; 2020 Mesto Russia
+    &copy; 2022 Mesto Russia
   </p>
 </footer>
 </div>
