feat: полностью адаптировать сайт

--- a/index.html
+++ b/index.html
@@ -80,5 +80,11 @@
   </p>
 </footer>
 </div>
+<section class="popup">
+  <div class="popup__container">
+    <button class="popup__close-button"></button>
+    <button>Сохранить</button>
+  </div>
+</section>
 </body>
 </html>
