--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
   </p>
 </footer>
 </div>
-<section class="popup">
-  <div class="popup__container">
+<section class="popup popup_opened">
+  <form action="" class="popup__form">
+    <h3 class="popup__edit-profile">Редактировать профиль</h3>
+    <input class="popup__form-input" type="text" name="firstName" value="Жак-Ив Кусто">
+    <input class="popup__form-input" type="text" name="firstName" value="Исследователь океана">
     <button class="popup__close-button"></button>
-    <button>Сохранить</button>
-  </div>
+    <button class="popup__save-button" type="submit">Сохранить</button>
+  </form>
 </section>
+<script src="./index.js"></script>
 </body>
 </html>
