--- a/index.html
+++ b/index.html
@@ -19,54 +19,54 @@
     <img src="./vendor/images/portrait-jacques-yves-cousteau.png" alt="Портрет исследователя океана Жак Ив Кусто" class="profile__image">
     <div class="profile__wrapper">
       <div class="profile__wrap">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title profile__title-name">Жак-Ив Кусто</h1>
         <button class="profile__edit-button"></button>
       </div>
-    <p class="profile__text">Исследователь океана</p>
+    <p class="profile__text profile__text-job">Исследователь океана</p>
     </div>
   <button class="profile__add-button"></button>
 </div>
 </section>
-<section class="elements">
-  <div class="elements__container">
+<section class="element">
+  <div class="element__wrapper">
     <div class="element__container">
       <img src="./vendor/images/element-1.jpg" alt="Северное сияние ночью" class="element__image">
-      <div class="flex__container">
+      <div class="element__wrap">
         <h3 class="element__title" >Северное сияние</h3>
         <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-2.jpg" alt="Галактика" class="element__image">
-      <div class="flex__container">
+      <div class="element__wrap">
         <h3 class="element__title">Галактика</h3>
         <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-3.jpg" alt="Северное сияние днём в Норвегии" class="element__image">
-      <div class="flex__container">
-        <h3 class="element__title element_indent">Норвегия</h3>
+      <div class="element__wrap">
+        <h3 class="element__title">Норвегия</h3>
         <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-4.jpg" alt="Гора Эверест" class="element__image">
-      <div class="flex__container">
+      <div class="element__wrap">
         <h3 class="element__title">Гора Эверест</h3>
         <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-5.jpg" alt="Восход у горы" class="element__image">
-      <div class="flex__container">
+      <div class="element__wrap">
         <h3 class="element__title">Восход у горы</h3>
         <button class="element__icon element__icon_active"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-6.jpg" alt="Поляна перед горой ночью" class="element__image">
-      <div class="flex__container">
+      <div class="element__wrap">
         <h3 class="element__title">Поляна</h3>
         <button class="element__icon element__icon_active"></button>
     </div>
@@ -83,12 +83,12 @@
 <section class="popup popup_opened">
   <form action="" class="popup__form">
     <h3 class="popup__edit-profile">Редактировать профиль</h3>
-    <input class="popup__form-input" type="text" name="firstName" value="Жак-Ив Кусто">
-    <input class="popup__form-input" type="text" name="firstName" value="Исследователь океана">
+    <input class="popup__form-input popup__form-input_name" type="text" value="Жак-Ив Кусто">
+    <input class="popup__form-input popup__form-input_job" type="text" value="Исследователь океана">
     <button class="popup__close-button"></button>
     <button class="popup__save-button" type="submit">Сохранить</button>
   </form>
 </section>
-<script src="./index.js"></script>
+<script src="./pages/index.js"></script>
 </body>
 </html>
