--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
     <div class="element__container">
       <img src="./vendor/images/element-1.jpg" alt="Северное сияние ночью" class="element__image">
       <div class="element__wrap">
-        <p class="element__text" >Северное сияние</p>
+        <h2 class="element__text" >Северное сияние</h2>
         <button class="element__icon" type="button"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-2.jpg" alt="Галактика" class="element__image">
       <div class="element__wrap">
-        <p class="element__text">Галактика</p>
+        <h2 class="element__text">Галактика</h2>
         <button class="element__icon" type="button"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-3.jpg" alt="Северное сияние днём в Норвегии" class="element__image">
       <div class="element__wrap">
-        <p class="element__text">Норвегия</p>
+        <h2 class="element__text">Норвегия</h2>
         <button class="element__icon" type="button"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-4.jpg" alt="Гора Эверест" class="element__image">
       <div class="element__wrap">
-        <p class="element__text">Гора Эверест</p>
+        <h2 class="element__text">Гора Эверест</h2>
         <button class="element__icon" type="button"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-5.jpg" alt="Восход у горы" class="element__image">
       <div class="element__wrap">
-        <p class="element__text">Восход у горы</p>
+        <h2 class="element__text">Восход у горы</h2>
         <button class="element__icon" type="button"></button>
       </div>
     </div>
     <div class="element__container">
       <img src="./vendor/images/element-6.jpg" alt="Поляна перед горой ночью" class="element__image">
       <div class="element__wrap">
-        <p class="element__text">Поляна</p>
+        <h2 class="element__text">Поляна</h2>
         <button class="element__icon" type="button"></button>
     </div>
     </div>
@@ -83,9 +83,9 @@
   <div class="popup__container">
     <button class="popup__close-button" type="button"></button>
     <form action="#" class="popup__form" method="post">
-    <p class="popup__edit-profile">Редактировать профиль</p>
-    <input class="popup__form-input popup__form-input_type_name" type="text" placeholder="Жак-Ив Кусто" name="author">
-    <input class="popup__form-input popup__form-input_type_description" type="text" placeholder="Исследователь океана" name="description">
+    <h2 class="popup__edit-profile">Редактировать профиль</h2>
+    <input class="popup__form-input popup__form-input_type_name" type="text" placeholder="Имя" name="author">
+    <input class="popup__form-input popup__form-input_type_description" type="text" placeholder="О себе" name="description">
     <button class="popup__save-button" type="submit">Сохранить</button>
   </form>
   </div>
