--- a/index.html
+++ b/index.html
@@ -10,100 +10,25 @@
   <body class="page">
     <div class="page__container">
       <header class="header">
-        <img
-          src="./vendor/images/header-logo.svg"
-          alt="Логотип Место"
-          class="header__logo"
-        >
+        <img src="./vendor/images/header-logo.svg" alt="Логотип Место" class="header__logo">
       </header>
       <main class="content">
         <section class="profile">
           <div class="profile__container">
-            <img
-              src="./vendor/images/portrait-jacques-yves-cousteau.png"
-              alt="Портрет исследователя океана Жак Ив Кусто"
-              class="profile__image"
-            >
+            <img src="./vendor/images/portrait-jacques-yves-cousteau.png" alt="Портрет исследователя океана Жак Ив Кусто" class="profile__image">
             <div class="profile__wrapper">
               <div class="profile__wrap">
                 <h1 class="profile__title profile__title-name">Жак-Ив Кусто</h1>
                 <button class="profile__edit-button" type="button"></button>
               </div>
-              <p class="profile__text profile__text-job">
-                Исследователь океана
-              </p>
+              <p class="profile__text profile__text-job">Исследователь океана</p>
             </div>
             <button class="profile__add-button" type="button"></button>
           </div>
         </section>
         <section class="element">
-          <div class="element__wrapper">
-            <div class="element__container">
-              <img
-                src="./vendor/images/element-1.jpg"
-                alt="Северное сияние ночью"
-                class="element__image"
-              >
-              <div class="element__wrap">
-                <h2 class="element__text">Северное сияние</h2>
-                <button class="element__icon" type="button"></button>
-              </div>
-            </div>
-            <div class="element__container">
-              <img
-                src="./vendor/images/element-2.jpg"
-                alt="Галактика"
-                class="element__image"
-              >
-              <div class="element__wrap">
-                <h2 class="element__text">Галактика</h2>
-                <button class="element__icon" type="button"></button>
-              </div>
-            </div>
-            <div class="element__container">
-              <img
-                src="./vendor/images/element-3.jpg"
-                alt="Северное сияние днём в Норвегии"
-                class="element__image"
-              >
-              <div class="element__wrap">
-                <h2 class="element__text">Норвегия</h2>
-                <button class="element__icon" type="button"></button>
-              </div>
-            </div>
-            <div class="element__container">
-              <img
-                src="./vendor/images/element-4.jpg"
-                alt="Гора Эверест"
-                class="element__image"
-              >
-              <div class="element__wrap">
-                <h2 class="element__text">Гора Эверест</h2>
-                <button class="element__icon" type="button"></button>
-              </div>
-            </div>
-            <div class="element__container">
-              <img
-                src="./vendor/images/element-5.jpg"
-                alt="Восход у горы"
-                class="element__image"
-              >
-              <div class="element__wrap">
-                <h2 class="element__text">Восход у горы</h2>
-                <button class="element__icon" type="button"></button>
-              </div>
-            </div>
-            <div class="element__container">
-              <img
-                src="./vendor/images/element-6.jpg"
-                alt="Поляна перед горой ночью"
-                class="element__image"
-              >
-              <div class="element__wrap">
-                <h2 class="element__text">Поляна</h2>
-                <button class="element__icon" type="button"></button>
-              </div>
-            </div>
+          <div class="element__lists">
+
           </div>
         </section>
       </main>
@@ -111,27 +36,56 @@
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup">
+    <div class="popup popup-profile">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
         <form action="#" class="popup__form" method="post">
           <h2 class="popup__edit-profile">Редактировать профиль</h2>
-          <input
-            class="popup__form-input popup__form-input_type_name"
-            type="text"
-            placeholder="Имя"
-            name="author"
-          >
-          <input
-            class="popup__form-input popup__form-input_type_description"
-            type="text"
-            placeholder="О себе"
-            name="description"
-          >
+          <input class="popup__form-input popup__form-input_type_name" type="text" placeholder="Имя" name="author">
+          <input class="popup__form-input popup__form-input_type_description" type="text" placeholder="О себе" name="description">
           <button class="popup__save-button" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
+
+    <div class="popup popup-image">
+      <div class="popup-image__container">
+        <button class="popup__close-button" type="button"></button>
+        <figure class="popup-image__card">
+          <img src="" alt="" class="popup-image__zoom">
+          <figcaption class="popup-image__caption"></figcaption>
+        </figure>
+      </div>
+    </div>
+
+    <div class="popup card-element-popup">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button"></button>
+        <form action="#" class="popup__form" method="post">
+          <h2 class="popup__edit-profile">Новое место</h2>
+          <input class="popup__form-input popup__form-input_type_title" type="text" placeholder="Название" name="title">
+          <input class="popup__form-input popup__form-input_type_url" type="url" placeholder="Ссылка на картинку" name="url">
+          <button class="popup__save-button" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
+
+
+    <template id="template-cards">
+        <div class="element__wrapper">
+          <div class="element__container">
+            <button class="element__trash-icon" type="button"></button>
+            <img src="#" alt="#" class="element__image">
+            <div class="element__wrap">
+              <h2 class="element__text"></h2>
+              <button class="element__icon" type="button"></button>
+            </div>
+          </div>
+        </div>
+    </template>
+
+
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
