feat: Собрал 5ПР

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="popup-image__container">
         <button class="popup__close-button" type="button"></button>
         <figure class="popup-image__card">
-          <img src="" alt="" class="popup-image__zoom">
+          <img src="#" alt="#" class="popup-image__zoom">
           <figcaption class="popup-image__caption"></figcaption>
         </figure>
       </div>
