--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         </div>
       </div>
     </template>
+    <script src="./scripts/constants.js"></script>
     <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
