--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+        <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
       </footer>
     </div>
     <div class="popup popup-profile">
@@ -51,6 +51,7 @@
             type="text"
             placeholder="Имя"
             name="name"
+            id="name"
             required
             minlength="2"
             maxlength="40">
@@ -62,6 +63,7 @@
             type="text"
             placeholder="О себе"
             name="description"
+            id="description"
             required
             minlength="2"
             maxlength="200">
@@ -93,6 +95,7 @@
             type="text"
             placeholder="Название"
             name="title"
+            id="title"
             minlength="2"
             maxlength="30"
             required>
@@ -103,9 +106,10 @@
             class="popup__form-input popup__form-input_type_url"
             type="url"
             placeholder="Ссылка на картинку"
-            name="url"
+            name="link"
+            id="link"
             required>
-            <span class="popup__error popup__error_type_url"></span>
+            <span class="popup__error popup__error_type_link"></span>
           </label>
           <button class="popup__save-button" type="submit">Создать</button>
         </form>
@@ -124,6 +128,6 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
