--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-  <script defer src="main.js"></script></head>
-  <link rel="stylesheet" href="./index.css">
+  <script defer src="main.js"></script><link href="main.css" rel="stylesheet"></head>
   <body class="page">
     <div class="page__container">
       <header class="header">
@@ -164,6 +163,5 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./index.js"></script>
   </body>
 </html>
