--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eng">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
   </head>
-  <link rel="stylesheet" href="./index.css">
   <body class="page">
     <div class="page__container">
       <header class="header">
         <img
-          src='../images/header-logo.svg'
+          src="<%=require('../images/header-logo.svg')%>"
           alt="Логотип Место"
           class="header__logo">
       </header>
@@ -164,6 +163,5 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./index.js"></script>
   </body>
 </html>
