--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eng">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     <div class="page__container">
       <header class="header">
         <img
-          src='../images/header-logo.svg'
+          src="images/header-logo.bbe2a6eafac19c3d031c.svg"
           alt="Логотип Место"
           class="header__logo">
       </header>
