--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,12 +17,11 @@
       <main class="content">
         <section class="profile">
           <div class="profile__container">
-
             <button class="profile__avatar-btn">
-            <img
-              src='#'
-              alt="Портрет исследователя океана Жак Ив Кусто"
-              class="profile__image">
+              <img
+                src="#"
+                alt="Портрет исследователя океана Жак Ив Кусто"
+                class="profile__image">
             </button>
             <div class="profile__wrapper">
               <div class="profile__wrap">
@@ -45,30 +44,35 @@
     <div class="popup popup-profile">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
-        <form action="#" class="popup__form" method="post" novalidate name="edit-profile">
+        <form
+          action="#"
+          class="popup__form"
+          method="post"
+          novalidate
+          name="edit-profile">
           <h2 class="popup__edit-profile">Редактировать профиль</h2>
           <label class="popup__form-field">
-          <input
-            class="popup__form-input popup__form-input_type_name"
-            type="text"
-            placeholder="Имя"
-            name="name"
-            id="name"
-            required
-            minlength="2"
-            maxlength="40">
+            <input
+              class="popup__form-input popup__form-input_type_name"
+              type="text"
+              placeholder="Имя"
+              name="name"
+              id="name"
+              required
+              minlength="2"
+              maxlength="40">
             <span class="popup__error popup__error_type_name"></span>
           </label>
           <label class="popup__form-field">
-          <input
-            class="popup__form-input popup__form-input_type_description"
-            type="text"
-            placeholder="О себе"
-            name="description"
-            id="description"
-            required
-            minlength="2"
-            maxlength="200">
+            <input
+              class="popup__form-input popup__form-input_type_description"
+              type="text"
+              placeholder="О себе"
+              name="description"
+              id="description"
+              required
+              minlength="2"
+              maxlength="200">
             <span class="popup__error popup__error_type_description"></span>
           </label>
           <button class="popup__save-button" type="submit">Сохранить</button>
@@ -89,28 +93,33 @@
     <div class="popup card-element-popup">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
-        <form action="#" class="popup__form" method="post"  novalidate name="addcard">
+        <form
+          action="#"
+          class="popup__form"
+          method="post"
+          novalidate
+          name="addcard">
           <h2 class="popup__edit-profile">Новое место</h2>
           <label class="popup__form-field">
-          <input
-            class="popup__form-input popup__form-input_type_title"
-            type="text"
-            placeholder="Название"
-            name="title"
-            id="title"
-            minlength="2"
-            maxlength="30"
-            required>
+            <input
+              class="popup__form-input popup__form-input_type_title"
+              type="text"
+              placeholder="Название"
+              name="title"
+              id="title"
+              minlength="2"
+              maxlength="30"
+              required>
             <span class="popup__error popup__error_type_title"></span>
           </label>
           <label class="popup__form-field">
-          <input
-            class="popup__form-input popup__form-input_type_url"
-            type="url"
-            placeholder="Ссылка на картинку"
-            name="link"
-            id="link"
-            required>
+            <input
+              class="popup__form-input popup__form-input_type_url"
+              type="url"
+              placeholder="Ссылка на картинку"
+              name="link"
+              id="link"
+              required>
             <span class="popup__error popup__error_type_link"></span>
           </label>
           <button class="popup__save-button" type="submit">Создать</button>
@@ -118,21 +127,26 @@
       </div>
     </div>
 
-
-
     <div class="popup popup-avatar">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
-        <form action="#" class="popup__form" method="post"  novalidate name="avatarcard">
-          <h2 class="popup__edit-profile popup__edit-profile_avatar">Обновить аватар</h2>
+        <form
+          action="#"
+          class="popup__form"
+          method="post"
+          novalidate
+          name="avatarcard">
+          <h2 class="popup__edit-profile popup__edit-profile_avatar">
+            Обновить аватар
+          </h2>
           <label class="popup__form-field popup__form-field_avatar">
-          <input
-            class="popup__form-input popup__form-input_type_url"
-            type="url"
-            placeholder="Ссылка на картинку"
-            name="avatar"
-            id="avatar"
-            required>
+            <input
+              class="popup__form-input popup__form-input_type_url"
+              type="url"
+              placeholder="Ссылка на картинку"
+              name="avatar"
+              id="avatar"
+              required>
             <span class="popup__error popup__error_type_avatar"></span>
           </label>
           <button class="popup__save-button" type="submit">Сохранить</button>
@@ -143,13 +157,17 @@
     <div class="popup popup-delete">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
-        <form action="#" class="popup__form" method="post"  novalidate name="deletecard">
+        <form
+          action="#"
+          class="popup__form"
+          method="post"
+          novalidate
+          name="deletecard">
           <h2 class="popup__edit-profile">Вы уверены?</h2>
           <button class="popup__save-button" type="submit">Да</button>
         </form>
       </div>
     </div>
-
 
     <template id="template-cards">
       <div class="element__wrapper">
@@ -158,7 +176,10 @@
           <img src="#" alt="#" class="element__image">
           <div class="element__wrap">
             <h2 class="element__text"></h2>
-            <button class="element__icon" type="button"></button>
+            <div class="element__like-container">
+              <button class="element__icon" type="button"></button>
+              <span class="element__like-counter">0</span>
+            </div>
           </div>
         </div>
       </div>
