--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -178,7 +178,7 @@
             <h2 class="element__text"></h2>
             <div class="element__like-container">
               <button class="element__icon" type="button"></button>
-              <span class="element__like-counter">0</span>
+              <span class="element__like-counter"></span>
             </div>
           </div>
         </div>
